{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 791,
  "lineage": "00464d68-4248-ba85-9873-a74b6f7ae128",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance_1a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b72821e2f351e396",
            "arn": "arn:aws:ec2:us-east-1:252062044396:instance/i-07bc3fc213fed725f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-07bc3fc213fed725f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-050018f97a20cf95e",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_ip": "10.0.1.54",
            "public_ip": "54.80.52.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01e159dd62c31bdc4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b8dde42cff85ce5",
            "tags": {
              "Name": "web-instance-1a-1"
            },
            "tags_all": {
              "Name": "web-instance-1a-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb6869c9be549bb9"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.norton_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance_1a_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b72821e2f351e396",
            "arn": "arn:aws:ec2:us-east-1:252062044396:instance/i-06773bca030f628b2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile",
            "id": "i-06773bca030f628b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00da8ca44e292284f",
            "private_dns": "ip-10-0-1-149.ec2.internal",
            "private_ip": "10.0.1.149",
            "public_ip": "18.232.72.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02dde06ad00004a42",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b8dde42cff85ce5",
            "tags": {
              "Name": "web-instance-1a-2"
            },
            "tags_all": {
              "Name": "web-instance-1a-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eb6869c9be549bb9"
            ]
          },
          "dependencies": [
            "aws_db_instance.default",
            "aws_db_subnet_group.rds_subnet_group",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.rds_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.norton_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance_us_east_2a_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00db8dadb36c9815e",
            "arn": "arn:aws:ec2:us-east-2:252062044396:instance/i-0e3a1965775d0c10d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile-us-east-2",
            "id": "i-0e3a1965775d0c10d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a125be153bb39086",
            "private_dns": "ip-10-0-1-98.us-east-2.compute.internal",
            "private_ip": "10.0.1.98",
            "public_ip": "18.191.100.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06724a30d3db912b0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045e3943ce0fa23f3",
            "tags": {
              "Name": "web-instance-us-east-2a-1"
            },
            "tags_all": {
              "Name": "web-instance-us-east-2a-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ddca9b230b18f257"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile_us_east_2",
            "aws_iam_role.ec2_role_us_east_2",
            "aws_security_group.web_sg_us_east_2",
            "aws_subnet.public_subnet_us_east_2a",
            "aws_vpc.norton_vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_instance_us_east_2a_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00db8dadb36c9815e",
            "arn": "arn:aws:ec2:us-east-2:252062044396:instance/i-063ddcbfb6ac2c3a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-profile-us-east-2",
            "id": "i-063ddcbfb6ac2c3a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0141418d02b88b60d",
            "private_dns": "ip-10-0-1-11.us-east-2.compute.internal",
            "private_ip": "10.0.1.11",
            "public_ip": "3.21.105.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03491d77edc1dcb06",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045e3943ce0fa23f3",
            "tags": {
              "Name": "web-instance-us-east-2a-2"
            },
            "tags_all": {
              "Name": "web-instance-us-east-2a-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ddca9b230b18f257"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile_us_east_2",
            "aws_iam_role.ec2_role_us_east_2",
            "aws_security_group.web_sg_us_east_2",
            "aws_subnet.public_subnet_us_east_2a",
            "aws_vpc.norton_vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252062044396:internet-gateway/igw-0c5f70995808ec1ad",
            "id": "igw-0c5f70995808ec1ad",
            "owner_id": "252062044396",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0a380570b64dcee31"
          },
          "dependencies": [
            "aws_vpc.norton_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_us_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:252062044396:internet-gateway/igw-0019f7763447207e8",
            "id": "igw-0019f7763447207e8",
            "owner_id": "252062044396",
            "tags": {
              "Name": "internet-gateway-us-east-2"
            },
            "tags_all": {
              "Name": "internet-gateway-us-east-2"
            },
            "vpc_id": "vpc-0836c99019a74c843"
          },
          "dependencies": [
            "aws_vpc.norton_vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg_us_east_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:252062044396:targetgroup/web-target-group-us-east-1/2f645b10cb6bbdff",
            "arn_suffix": "targetgroup/web-target-group-us-east-1/2f645b10cb6bbdff",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:252062044396:targetgroup/web-target-group-us-east-1/2f645b10cb6bbdff",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-target-group-us-east-1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web-target-group-us-east-1"
            },
            "tags_all": {
              "Name": "web-target-group-us-east-1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0a380570b64dcee31"
          },
          "dependencies": [
            "aws_vpc.norton_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg_us_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:252062044396:targetgroup/web-target-group-us-east-2/6c754290d336f95c",
            "arn_suffix": "targetgroup/web-target-group-us-east-2/6c754290d336f95c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:252062044396:targetgroup/web-target-group-us-east-2/6c754290d336f95c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-target-group-us-east-2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web-target-group-us-east-2"
            },
            "tags_all": {
              "Name": "web-target-group-us-east-2"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0836c99019a74c843"
          },
          "dependencies": [
            "aws_vpc.norton_vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252062044396:route-table/rtb-048bde47c1cc3d5c8",
            "id": "rtb-048bde47c1cc3d5c8",
            "owner_id": "252062044396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5f70995808ec1ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a380570b64dcee31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.norton_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_us_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:252062044396:route-table/rtb-00ad17ac5f6a7743c",
            "id": "rtb-00ad17ac5f6a7743c",
            "owner_id": "252062044396",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0019f7763447207e8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-us-east-2"
            },
            "tags_all": {
              "Name": "public-route-table-us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0836c99019a74c843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_us_east_2",
            "aws_vpc.norton_vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045d0ea05c695312b",
            "route_table_id": "rtb-048bde47c1cc3d5c8",
            "subnet_id": "subnet-02b8dde42cff85ce5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1a",
            "aws_vpc.norton_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a594f6dca455d0cc",
            "route_table_id": "rtb-048bde47c1cc3d5c8",
            "subnet_id": "subnet-0f1f6c298d096d62e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1b",
            "aws_vpc.norton_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc_us_east_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfc04ecf45ad6cc3",
            "route_table_id": "rtb-00ad17ac5f6a7743c",
            "subnet_id": "subnet-045e3943ce0fa23f3"
          },
          "dependencies": [
            "aws_internet_gateway.igw_us_east_2",
            "aws_route_table.public_rt_us_east_2",
            "aws_subnet.public_subnet_us_east_2a",
            "aws_vpc.norton_vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252062044396:security-group/sg-058828157e8aa3c53",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058828157e8aa3c53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20241003061000583300000002",
            "name_prefix": "terraform-",
            "owner_id": "252062044396",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a380570b64dcee31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.norton_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg_us_west_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:252062044396:security-group/sg-0409d04b749c6f4c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0409d04b749c6f4c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20241003061005569000000001",
            "name_prefix": "terraform-",
            "owner_id": "252062044396",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg-us-west-1"
            },
            "tags_all": {
              "Name": "rds-sg-us-west-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-036f0398cb38977f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.norton_vpc_us_west_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252062044396:security-group/sg-0eb6869c9be549bb9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb6869c9be549bb9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241003061000411200000001",
            "name_prefix": "terraform-",
            "owner_id": "252062044396",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a380570b64dcee31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.norton_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg_us_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:252062044396:security-group/sg-0ddca9b230b18f257",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddca9b230b18f257",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241003061003926300000001",
            "name_prefix": "terraform-",
            "owner_id": "252062044396",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg-us-east-2"
            },
            "tags_all": {
              "Name": "web-sg-us-east-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0836c99019a74c843"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.norton_vpc_us_east_2"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252062044396:subnet/subnet-02b8dde42cff85ce5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b8dde42cff85ce5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252062044396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1a"
            },
            "tags_all": {
              "Name": "public-subnet-1a"
            },
            "vpc_id": "vpc-0a380570b64dcee31"
          },
          "dependencies": [
            "aws_vpc.norton_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252062044396:subnet/subnet-0f1f6c298d096d62e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1f6c298d096d62e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252062044396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1b"
            },
            "tags_all": {
              "Name": "public-subnet-1b"
            },
            "vpc_id": "vpc-0a380570b64dcee31"
          },
          "dependencies": [
            "aws_vpc.norton_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_us_east_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:252062044396:subnet/subnet-045e3943ce0fa23f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045e3943ce0fa23f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252062044396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-us-east-2a"
            },
            "tags_all": {
              "Name": "public-subnet-us-east-2a"
            },
            "vpc_id": "vpc-0836c99019a74c843"
          },
          "dependencies": [
            "aws_vpc.norton_vpc_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_us_west_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:252062044396:subnet/subnet-012dd3d4b5e7f8d5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012dd3d4b5e7f8d5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252062044396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-us-west-1a"
            },
            "tags_all": {
              "Name": "public-subnet-us-west-1a"
            },
            "vpc_id": "vpc-036f0398cb38977f5"
          },
          "dependencies": [
            "aws_vpc.norton_vpc_us_west_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_us_west_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:252062044396:subnet/subnet-0475d392123d7dd8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0475d392123d7dd8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252062044396",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-us-west-1b"
            },
            "tags_all": {
              "Name": "public-subnet-us-west-1b"
            },
            "vpc_id": "vpc-036f0398cb38977f5"
          },
          "dependencies": [
            "aws_vpc.norton_vpc_us_west_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "norton_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:252062044396:vpc/vpc-0a380570b64dcee31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0296e12f2ef31bbee",
            "default_route_table_id": "rtb-0b674588508ce60b9",
            "default_security_group_id": "sg-01ce559092a0d7a9d",
            "dhcp_options_id": "dopt-0e3cd72f7f5dca8d6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a380570b64dcee31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b674588508ce60b9",
            "owner_id": "252062044396",
            "tags": {
              "Name": "norton-vpc"
            },
            "tags_all": {
              "Name": "norton-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "norton_vpc_us_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:252062044396:vpc/vpc-0836c99019a74c843",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f3e10c64cb20b8d2",
            "default_route_table_id": "rtb-048c6f303134cae67",
            "default_security_group_id": "sg-0f05ad34861f6b30d",
            "dhcp_options_id": "dopt-0adf4537375264a6d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0836c99019a74c843",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048c6f303134cae67",
            "owner_id": "252062044396",
            "tags": {
              "Name": "norton-vpc-us-east-2"
            },
            "tags_all": {
              "Name": "norton-vpc-us-east-2"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "norton_vpc_us_west_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:252062044396:vpc/vpc-036f0398cb38977f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-044acde8ea92c90eb",
            "default_route_table_id": "rtb-05304624e4366f17b",
            "default_security_group_id": "sg-0aebd3c523461239e",
            "dhcp_options_id": "dopt-0fff1773df181e87f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-036f0398cb38977f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05304624e4366f17b",
            "owner_id": "252062044396",
            "tags": {
              "Name": "norton-vpc-us-west-1"
            },
            "tags_all": {
              "Name": "norton-vpc-us-west-1"
            }
          }
        }
      ]
    }
  ]
}